fixed resume button on mobile

--- a/main.css
+++ b/main.css
@@ -417,6 +417,7 @@ a {
 	letter-spacing: .5em;
 	cursor: pointer;
   transform: rotate(-10deg);
+  -webkit-appearance: none;
 }
 
 .resume-button:hover{
